# tunebench

./: .gitignore  Makefile  README.md  pyproject.toml
data/: demo.json  generic.json  narrow.json
src/analysis/: __init__.py  head_importance.py  metrics.py  weight_diff.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  freeze.py  loader.py  lora.py
src/training/: __init__.py  layerwise_lr.py  sweeps.py  trainer.py
src/tunebench/: __init__.py  cli.py  dataset.py  freeze_utils.py  lora_utils.py  trainer.py  utils.py  weight_diff.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_advanced.py  test_dataset.py  test_freeze_utils.py  test_head_importance.py  test_layerwise_lr.py  test_lora_utils.py  test_metrics.py  test_model_loader.py  test_sweeps.py  test_utils.py  test_weight_diff.py
